# ib_fundamental

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: build-n-test.yml  pypi-publish.yml
ib_fundamental/: __init__.py  fundamental.py  ib_client.py  objects.py  utils.py  xml_parser.py  xml_report.py
tests/: conftest.py  fundamental_data_test.py  ib_client_test.py  utils_test.py  xml_parser_test.py  xml_report_test.py
