[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ib_fundamental"
version = "0.0.1"
authors = [{ name = "gnzsnz" }]
description = "Interactive Brokers Fundamental data for humans"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache License Version 2.0",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "ib_async>=1.0.1",
  "pandas>=2.2.2",
  "orjson>=3.10.3",
  "defusedxml>=0.7.1",
]

[project.urls]
"Homepage" = "https://github.com/quantbelt/ib_fundamental"
"Bug Tracker" = "https://github.com/quantbelt/ib_fundamental/issues"

[project.optional-dependencies] # Optional
dev = [
  "black>=24.4.2",
  "pylint>=3.1.1",
  "isort>=5.13.2",
  "mypy>=1.10.0",
  "pre-commit>=3.7.1",
  "pandas-stubs>=2.2.1.240316",
  "bandit[toml]>=1.7.8",
  "flake8>=7.0.0",
]
#test = ["coverage"]

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["ib_fundamental"]

[tool.pylint.format]
# black compatibility
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
max-line-length = "88"

[tool.bandit]
skips = ["B405"]
